[package]
name = "code_report_rs"
version = "0.1.0"
edition = "2021"
authors = ["Dan Belocurov <https://github.com/Chu-4hun>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
docx-rs = "0.4"
glob = "0.3"
rand = "0.9"
walkdir = "2.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "code_report_rs"
path = "src/main.rs"